src/objects/BMCServiceDesk__Client_User_Imports__c.object
<CustomObject>
    <description>This object allows you to store data for importing clients.</description>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__City__c</fullName>
        <description>This field stores the city linked to the client</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_User_Name__c</fullName>
        <description>This unique field identifies the user in the object from where the user is imported. This field can be the Lightweight Directory Access Protocol (LDAP) or Active Directory username or any other similar identifier.</description>
        <label>Client User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CompanyName__c</fullName>
        <description>This field stores the company linked to the client</description>
        <label>CompanyName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Country__c</fullName>
        <description>This field stores the country linked to the client</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Department__c</fullName>
        <description>This field stores the department linked to the client</description>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Division__c</fullName>
        <description>This field stores the division linked to the client</description>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmailID__c</fullName>
        <description>This field stores the email id linked to the client</description>
        <label>Email ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmployeeNumber__c</fullName>
        <description>This field stores the employee number linked to the client</description>
        <label>EmployeeNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <description>This field stores the extension linked to the client</description>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fax__c</fullName>
        <description>This field stores the fax linked to the client</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Federation_ID__c</fullName>
        <label>Federation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__First_Name__c</fullName>
        <description>This field stores the first name of the client</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the client is active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Last_Name__c</fullName>
        <description>This field stores the last name of the client</description>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MobilePhone__c</fullName>
        <description>This field stores the mobile number linked to the client</description>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Phone__c</fullName>
        <description>This field stores the phone number linked to the client</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PostalCode__c</fullName>
        <description>This field stores the postal code linked to the client</description>
        <label>PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__State__c</fullName>
        <description>This field stores the state linked to the client</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Street__c</fullName>
        <description>This field stores the street linked to the client</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Title__c</fullName>
        <description>This field stores the title of the client</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <description>This field stores the pager number linked to the client</description>
        <label>pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Client User Imports</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClientUserImports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>